Final commit with all resources

--- a/1_1087_AVRAM_ALIN_IOAN.html
+++ b/1_1087_AVRAM_ALIN_IOAN.html
@@ -8,9 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="1_1087_AVRAM_Alin.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvg/1.5/canvg.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Canvas2SVG/1.0.19/canvas2svg.min.js"></script>
+    <link rel="stylesheet" href="1_1087_AVRAM_ALIN_IOAN.css" />
   </head>
   <body>
     <div class="continut">
@@ -45,6 +43,6 @@
         style="border: 1px solid black; background: white"
       ></canvas>
     </div>
-    <script src="1_1087_AVRAM_Alin.js"></script>
+    <script src="1_1087_AVRAM_ALIN_IOAN.js"></script>
   </body>
 </html>
